--- a/Project.toml
+++ b/Project.toml
@@ -1,13 +1,13 @@
 name = "PointSetVisualizer"
 uuid = "c1998724-06c8-4b73-8944-aed6cfa5d6a5"
 authors = ["Roy Chih Chung Wang <roy.c.c.wang@proton.me>"]
-version = "0.1.0"
+version = "0.2.0"
 
 [deps]
 GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
 
 [compat]
-GLMakie = "0.13.6"
+GLMakie = "=0.13.7"
 julia = "1.11"
 
 [extras]
